[package]
name = "bake"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
linked-hash-map = "0.5.4"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5.4"
serde = { version="1.0.130", features=["derive"] }
serde_yaml = "0.8.21"
termion = "1.5.6"
yaml-rust = "0.4.5"
